--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
     <EditText
         android:id="@+id/nameEditText"
-        android:layout_width="194dp"
+        android:layout_width="307dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="57dp"
         android:ems="10"
         android:hint="@string/hint_hier_name_eingeben"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:text="" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="216dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="95dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="144dp"
         android:text="@string/button_text" />
 
 </RelativeLayout>
+
+
